# NeekOS

./: .gitignore  README.md
os/: Cargo.toml  main.rs  serial.rs  vga_buffer.rs  x86_64-NeekOS.json
os/.cargo/: config.toml
os/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
os/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
os/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
