[package]
name = "os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Disable stack unwinding as it is complicated and relies on OS-specific libs. Abort on panic
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
